--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -1134,6 +1134,7 @@
 
         if(sessionId == "") {
             alert('로그인 후에 이용 가능합니다.');
+            location.href="../login/login.html";
             return;
         }
         let optionQueryString = "";
@@ -1152,6 +1153,7 @@
         
         if(sessionId == "") {
             alert('로그인 후에 이용 가능합니다.');
+            location.href="../login/login.html";
             return;
         }
 
