--- a/view/store/order.html
+++ b/view/store/order.html
@@ -1182,7 +1182,7 @@ $(document).ready(function() {
             let optionStr = JSON.stringify(oppArr);
             
             $.ajax({
-                url: "http://192.168.0.231:3000/paymentAf",
+                url: "http://localhost:3000/paymentAf",
                 type: "post",
                 data: jdata,
                 //contentType: 'application/json',
