--- a/view/login/newPw.html
+++ b/view/login/newPw.html
@@ -119,7 +119,7 @@ $(document).ready(function(){
                 success:function(data){
                     if(data=="suc"){
                         alert("비밀번호가 정상적으로 변경되었습니다.");
-                    location.href="../community/mainCommunity.html";  
+                    location.href="./login.html";  
                     }              
                     },error:function(){
 
