--- a/view/store/order.html
+++ b/view/store/order.html
@@ -764,7 +764,7 @@ select::-ms-expand{
 
                     </div>
                     <button id="sidePaymentBtn" class="payment_btn" type="button" >0원 결제하기</button>
-                    <button id="testBtn" class="btn btn-primary" type="button" >결제창생략 임시버튼</button>
+                    <!-- <button id="testBtn" class="btn btn-primary" type="button" >결제창생략 임시버튼</button> -->
                 </div>
             </div>
         </div>
@@ -1149,7 +1149,7 @@ $(document).ready(function() {
 
 
     // 임시 결제버튼 클릭 (나중에 삭제)
-    $('#testBtn').click(function () {
+/*    $('#testBtn').click(function () {
 
         if($('#_name').val() == '') {
             alert('이름을 입력해주세요.');
@@ -1204,7 +1204,7 @@ $(document).ready(function() {
         }
     })
 
-
+*/
 
     // 아임포트 결제
     function requestPay(method,jdata) {
