--- a/view/community/storyDetail.html
+++ b/view/community/storyDetail.html
@@ -59,6 +59,7 @@
             -ms-transform: scale(1);
             -o-transform: scale(1);
             transition: all 0.1s ease-in-out;
+            z-index:100;
         }
 
         #marker:hover {
@@ -84,6 +85,7 @@
             padding-top: 15px;
             width: 300px;
             position: absolute;
+            z-index:500;
             border-radius: 10px;
             box-shadow: 1px 1px 1px rgba(248, 139, 14, 0.418);
             right: -120px;
@@ -91,10 +93,12 @@
             color: rgb(197, 99, 99);
             font-size: 13px;
             line-height: 1.4;
+            
         }
 
         #marker #markerMessage:before{
             position: absolute;
+            z-index:250;
             content: '';
             width:0;
             height: 0;
@@ -109,6 +113,7 @@
             height:40px;
             content:'';
             position: absolute;
+            z-index:250;
             top:-40px;
             left:0;
         }
@@ -231,7 +236,7 @@
                         
 
 
-                        <img id="mainImg" style="border-radius: 10px; width: 720px; height: 660px; object-fit: cover; ">
+                        <img id="mainImg" style="border-radius: 10px; width: 720px; height: 660px; object-fit: cover; z-index:3; ">
                     </div>
                 </div>
 
@@ -703,11 +708,11 @@
                 let itemList = "";
                 console.log(list);
                 $.each(list, function (i, val) {
-                    tag +=  '<div name="tags" style="position: absolute;">'
-                        +        '<div id="marker" style="position: relative; top: '+(val.locationY - 40)+'px;left: '+(val.locationX+33)+'px;">'
+                    tag +=  '<div name="tags" style="position: absolute; ">'
+                        +        '<div id="marker" style="position: relative;  top: '+(val.locationY - 40)+'px;left: '+(val.locationX+33)+'px;">'
                         +            '<img src="../../assets/img/marker.png" style="width: 40px;">'
-                        +            '<div id="markerMessage">'
-                        +                '<div class="row">'
+                        +            '<div id="markerMessage" style="position: relative; z-index:200; >'
+                        +                '<div class="row" >'
                         +                    '<div class="col">'
                         +                        '<img style="width: 80px;height: 80px;border-radius: 7px;margin-left: 10px; object-fit: cover;" src="http://192.168.0.231:3000/upload/' +val.productFileName+ '">'
                         +                    '</div>'
