--- a/view/login/regiAf.html
+++ b/view/login/regiAf.html
@@ -5,31 +5,44 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+
+    <style>
+        .container {
+            align-items: center;
+        }
+
+    </style>
+    
+
+
     <title>완벽한 자취생활, 완자 - 회원가입</title>
 </head>
+
+
 
 <body>
     <header include-html="../commons/header.html"></header>
 
-    <div class="container" style="text-align: left;margin: 0px auto;height: 943px;width: 382px;font-family: 'Noto Sans KR', sans-serif;">
-        <div class="row">
-            <div class="col" style="margin-top: 30px;">
-                <h1 style="margin: 33px;font-size: 36px;margin-left: 46px;"><strong>회원가입 완료</strong></h1>
+    
+
+    <div class="container" style="text-align: center;margin: 0px auto;height: 943px;width: 800px;font-family: 'Noto Sans KR', sans-serif;">
+        <div class="row" >
+            <div class="col" style="margin-top: 30px; text-align: center;">
+                <h1 style="margin: 33px;font-size: 45px;margin-left: 46px;"><strong>회원가입 완료</strong></h1>
             </div>
         </div>
-        <div class="row">
-            <h1 style="font-size: 23px;margin: 0px;margin-left: 61px;">완자 회원가입을 축하드립니다.</h1>
+        <div class="row" style="font-size: 30px;margin: 0 auto;text-align: center;display: flex;justify-content: center;">
+            <h1 >완자 회원가입을 축하드립니다.</h1>
         </div>
-        <div class="row">
-            <h1 style="font-size: 13px;margin: 25px;margin-left: 90px;margin-bottom: 8px;">신규회원 40000포인트가 지급되었으며, </h1>
-            <h1 style="font-size: 13px;margin: 0px;margin-left: 90px;margin-bottom: 20px;">마이페이지에서 확인하실 수 있습니다.</h1>
+        <div class="row" style="text-align: center;flex-direction: column;">
+            <h1 style="font-size: 20px;/* margin: 25px; *//* margin-left: 90px; *//* margin-bottom: 8px; */">신규회원 40000포인트가 지급되었으며, </h1>
+            <h1 style="font-size: 20px;/* margin: 25px; *//* margin-left: 90px; *//* margin-bottom: 8px; */">마이페이지에서 확인하실 수 있습니다.</h1>
         </div>
-        <div class="row">
-            <div class="col" style="text-align: center;"><img src="../../assets/img/190124_tour_coupon_10000.png" style="text-align: center;margin-left: -20px;margin-top: 10px;" width="400px"></div>
+        <div class="row" style="text-align: center;">
+            <div class="col" style="text-align: center;"><img src="../../assets/img/190124_tour_coupon_10000.png" style="text-align: center;margin-left: -20px;margin-top: 10px;" width="600px"></div>
         </div>
-        <div class="row">
-            <div class="col" style="text-align: center;"><button id="goHome" class="btn btn-sm" type="button" style="border-color: rgb(244,116,76);color: rgb(244,116,76);font-family: 'Noto Sans KR', sans-serif;font-size: 13px;padding-top: 4px;margin-top: 5px;">홈으로 가기</button></div>
+        <div class="row" style="text-align: center;">
+            <div class="col" style="text-align: center;"><button id="goHome" class="btn btn-lg" type="button" style="border-color: rgb(244,116,76);color: rgb(244,116,76);font-family: 'Noto Sans KR', sans-serif;font-size: 30px;padding-top: 4px;margin-top: 5px;">홈으로 가기</button></div>
         </div>
     </div>
     <footer include-html="../commons/footer.html"></footer>
