--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -1055,6 +1055,20 @@
         })
     })
 
+    // 상품 후기 숫자 카운팅
+    // var qccount;
+    // $.ajax({
+    // url:"http://localhost:3000/storeRevCount",
+    // type:"get",
+    // data:{productSeq:seq},
+    // async : false,
+    // success:function(data){
+    //     alert('storeRevCount 성공');
+    // }, error:function(data){
+    //     alert('storeRevCount 실패');
+    // }
+    // });
+
 
 
     // 상품 옵션 선택
@@ -1424,6 +1438,10 @@
         elements_qna.removeClass('active');
     });
 
+    function refresh(){
+        location.reload();
+    }
+
     // 리뷰 작성 완료 버튼
     $('.review_write_btn').click(function() {
 
@@ -1446,6 +1464,7 @@
                     alert("리뷰가 성공적으로 작성되었습니다.");
                     getProductDetail();
                     getProductReviewList(0, 0);
+                    refresh();
                     
                 } else {
                     console.log('리뷰 작성 실패');
@@ -1556,6 +1575,8 @@
             }
         });
     };
+
+
 
     // 리뷰 별점순 클릭
     function selectRating(num) {
@@ -1716,6 +1737,7 @@
                     alert("문의글이 작성되었습니다.");
                     //getProductQnAList(0);
                     elements_qna.removeClass('active');
+                    refresh();
                 } else {
                     console.log('문의글 작성 실패');
                 }
