--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -131,8 +131,9 @@
           font-weight: 500;
         }   
         .question-detail-img{
-             width: 200px;
-            height: 200px; 
+             width: 600px;
+            height: 400px;
+            object-fit: cover;
         }
         .col-xl-2 .question-detail-sidebar{
             position: sticky;
@@ -249,6 +250,7 @@
 
                 <div class="question-detail-content">
                     <img src="" class="question-detail-img">
+                    <p id="contentText" style="margin-top: 20px; font-size: 15px;"></p>
                 </div>
 
                 <br><br><br>
@@ -290,10 +292,7 @@
                     <form class="comment-feed-form" id="comment-feed-form" method="POST" enctype="multipart/form-data" onsubmit="return false;">
 
                         <div class="comment-feed-form-user">
-                            <img src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=36" 
-                            srcSet="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=72 1.5x
-                            ,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=72 2x
-                            ,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images1527758173_fAU.jpeg?gif=1&amp;w=144 3x" />
+                            <img src="" id="_replyinput">
                         </div>
                         <!-- <input type="hidden" name="questionCommentSeq" id="questionCommentSeq">
                         <input type="hidden" name="questionCommentRegDate" id="questionCommentRegDate">
@@ -439,6 +438,7 @@ $(document).ready(function(){
     let sessionId = JSON.parse(sessionStorage.getItem("login"));
     console.log(sessionId);
 
+    $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName)
     //글 삭제하기
 
     //조회수 증가시키기
@@ -545,7 +545,7 @@ $(document).ready(function(){
 
             $('.question-detail-title').text(list.questionTitle);
             
-            $('.question-detail-content').append(list.questionContent);
+            $("#contentText").append(list.questionContent);
             $('.questions-writer-nickname').text(list.nickName);
             //$('.questions-writer-profile').text(list.userName);
             $('#questionSeq').val(list.questionSeq);
@@ -599,9 +599,9 @@ $(document).ready(function(){
                                 
                                 + "<a href='#' class='comment-feed-item-content-author-name'>"
                                     
-                                + "<img class='comment-feed-item-content-author-image' src=' " 
+                                + "<img class='comment-feed-item-content-author-image' src='http://localhost:3000/upload/" 
                                     
-                                    + pfname
+                                    +pfname
                                 + "' >"
                                 + "<span class='questioncommentwriter'>" + val.nickName + "</span>"
                                 + "</a>"
@@ -619,8 +619,8 @@ $(document).ready(function(){
                                     + "<div class='comment-feed-item'>"
                                         + "<div class='comment-feed-item-content'>"
                                             + "<a href='#' class='comment-feed-item-content-author-name'>"
-                                                + "<img class='comment-feed-item-content-author-image' src=' " 
-                                                + pfname
+                                                + "<img class='comment-feed-item-content-author-image' src='http://localhost:3000/upload/" 
+                                                +pfname
                                                 + "' >"
                                                 + "<span class='questioncommentwriter'>" + val.nickName + "</span>"
                                             + "</a>"
